# aitino

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  dummy_maeve.py  maeve.json  maeve.py  main.py  movefiles.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  shell.nix  the_error.log.invcs
.github/workflows/: dependabot-auto-approve.yml
aitino/: __init__.py  cache_service.py  crew.py  dummy_maeve.py  improver.py  maeve.py  parser.py  test_stream.py
aitino/autobuilder/: build_agents.py
aitino/created-prompts/agent-system-prompts/: generic-campaign.md  project-manager.md  system-campaign-3.md  system-campaign.md  user-campaign-2.md  user-campaign.md
aitino/created-prompts/flask-prompts/: flask-api-2.md
aitino/created-prompts/poe-prompts/: poe-trading-1.md  poe-trading-2.md  poe-trading-3.md  poe-trading-5.md
aitino/interfaces/: db.py
aitino/models/: __init__.py  agent_config.py  api_reply.py  code_execution_config.py  llm_config.py  message.py  session.py
aitino/prompts/: generic-improve-prompt.md  improve-prompt.md  new-extra-simplified-prompt.md  simplified-improve-prompt.md  system-improve-prompt.md  test.md
aitino/prompts/improve/: generic.md  system.md  user.md
aitino/ret_agents/: __init__.py  ret_assistant_agent.py  ret_conversable_agent.py  ret_conversable_agent_alt.py  ret_user_proxy_agent.py
aitino/tests/: test_thing.py
apps/aitino/: README.md
apps/aitino/api/: mypy.ini
apps/anzelmo/: package.json  tailwind.config.cjs
apps/anzelmo/src/: app.postcss
apps/anzelmo/web/: pnpm-lock.yaml
apps/api/: .flake8  .gitignore  main.py  mypy.ini  pyproject.toml  shell.nix
apps/api/api_client/: README.md
apps/api/scripts/: format.sh  lint.sh  load_poetry.bat  local_deploy.bat  local_docker.sh  test.sh  test_thing.sh
apps/api/src/: __init__.py  auth.py  crew.py  improver.py  mock.py  parser.py  rag.py  workflow_manager.py
apps/arxiv_auto/api/: README.md  logging.yaml  pyproject.toml
apps/arxiv_auto/web/: tailwind.config.js
apps/research_automation/api/: arxiv_results.txt  shell.nix
apps/research_automation/web/: package.json  update-supabase-types.sh
apps/rest/: .gitignore
apps/rest/api/: .env  .gitignore  pyproject.toml
apps/rest/api/cache/: cache.db  cache.db-shm  cache.db-wal
apps/rest/api/src/: __init__.py  comment_bot.py  dm.py  dummy_submissions.py  logging_utils.py  mail.py  reddit_posts.csv  reddit_utils.py  reddit_worker.py  relevance_bot.py  saving.py  upwork_worker.py
apps/rest/api/src/cache/: cache.db  cache.db-shm  cache.db-wal
apps/rest/api/src/interfaces/: db.py
apps/rest/api/src/models/: __init__.py  lead.py  reddit_comment.py
apps/rest/api/src/prompts/: commenting.py  good_proposal_examples.md  startino_business_plan.md  upwork_proposals.py
apps/rest/api/src/routers/: index.py
apps/rest/web/: pnpm-lock.yaml  svelte.config.js
apps/web/: .env.example  .eslintrc.cjs  .prettierignore  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json
erm/: v0.2.mmd  v0.3.mmd
scripts/: lint.sh
src/: dummy_maeve.py  maeve.py
(+803 files in other folders)
