[tool.poetry]
name = "aitino"
version = "0.0.1"
description = "Aitino's api"
authors = [
    "Jonas Lindberg <jonas.lindberg@futi.no>",
    "Jorge Lewis <jorge.lewis@futi.no>",
    "Leon Nilsson <leonlamnilsson@gmail.com>",
]
readme = "README.md"
license = "BSL-1.1 (https://github.com/Futino/aitino/blob/alpha/LICENSE)"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
tenacity = "^8.2.3"
pyautogen = "^0.2.16"
chromadb = "^0.4.24"
supabase = "^2.4.0"
aiohttp = "^3.9.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
black = "^24.2.0"
isort = "^5.12.0"
autoflake = "^2.2.1"
flake8 = "^7.0.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
pyright = "^1.1.352"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
